<resources>
    <string name="app_name">Mood Journal</string>
    <string name="select_mood">select mood</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="whats_your_mood">What\'s your mood today?</string>
    <string name="today_s_date">date</string>
    <string name="save">Save</string>
    <string name="mood_journal">Mood Journal</string>
    <string name="ApiKey">32c8f681e82741248f7a6088238dd767</string>
</resources>