<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp"
    android:background="@drawable/wallpaper1"
    >

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/psychologo" />
    <TextView
        android:id="@+id/sig_txt"
        android:layout_width="226dp"
        android:layout_height="70dp"
        android:layout_below="@+id/logo_image"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="75dp"
        android:gravity="center"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:fontFamily="sans-serif-medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="55dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/sig_txt"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:drawableRight="@drawable/email"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="55dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/username_field"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:drawableRight="@drawable/password"/>
</com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_field"
            android:layout_marginTop="16dp"
            android:backgroundTint="#f64a8a"
            android:textColor="@color/white"
            android:text="@string/login" />

        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/dont_have_an_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgot_password_text"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="-35dp"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgot_password_text"
            android:layout_marginStart="70dp"
            android:layout_marginTop="-21dp"
            android:layout_toEndOf="@+id/dont_have_an_account_text"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_up"
            android:textColor="#E8DE86"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
