<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp"
    android:background="@drawable/wallpaper1"
    tools:context=".Login"
    >



    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="77dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/psychologo" />

    <TextView
        android:id="@+id/sig_txt"
        android:layout_width="226dp"
        android:layout_height="61dp"
        android:layout_below="@+id/logo_image"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="75dp"
        android:gravity="center"
        android:text="Sign-Up"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="352dp"
        android:layout_height="460dp"
        android:layout_below="@+id/logo_image"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="94dp"
        android:layout_marginBottom="45dp"
        android:orientation="vertical">


<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="55dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:drawableRight="@drawable/email"/>
</com.google.android.material.textfield.TextInputLayout>


 <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="55dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@+id/email_field"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:drawableRight="@drawable/password"/>
 </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_field"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:text="Sign-Up"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#f64a8a" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/already_have_an_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="48dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/already_have_an_account_text"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-21dp"
        android:layout_toEndOf="@+id/already_have_an_account_text"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login"
        android:textColor="#E8DE86"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>

    </LinearLayout>




</RelativeLayout>
